--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@pinecone-database/pinecone": "^4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "md5": "^2.3.0",
