--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@pinecone-database/pinecone": "^4.0.0",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +22,8 @@
     "uuid": "^11.0.4"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
